[gd_scene load_steps=6 format=3 uid="uid://bubjsiara3vsa"]

[ext_resource type="Script" uid="uid://3edx4sgh8mdf" path="res://mexican_wave_typing_game.gd" id="1_d7iiw"]
[ext_resource type="PackedScene" uid="uid://def43p88jt0ty" path="res://crowd_line.tscn" id="1_yqivm"]

[sub_resource type="LabelSettings" id="LabelSettings_yqivm"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_d7iiw"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_r0hlr"]
font_size = 64

[node name="MexicanWaveTypingGame" type="Node2D"]
script = ExtResource("1_d7iiw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.4378049, 0.7202219, 0.58813035, 1)

[node name="PlayerCrowdLine" parent="." node_paths=PackedStringArray("first_crowd_member_marker") instance=ExtResource("1_yqivm")]
accepting_inputs = true
phrase = "The quick brown fox!"
spacing_between_crowd_members = 56
first_crowd_member_marker = NodePath("FirstCrowdMemberPosition")

[node name="FirstCrowdMemberPosition" type="Marker2D" parent="PlayerCrowdLine"]
position = Vector2(32, 176)

[node name="EnemyCrowdLine" parent="." node_paths=PackedStringArray("first_crowd_member_marker") instance=ExtResource("1_yqivm")]
phrase = "The quick brown fox!"
spacing_between_crowd_members = 56
first_crowd_member_marker = NodePath("FirstCrowdMemberPosition")

[node name="FirstCrowdMemberPosition" type="Marker2D" parent="EnemyCrowdLine"]
position = Vector2(32, 432)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_top = 192.0
offset_right = 1152.0
offset_bottom = 320.0
color = Color(0.46055228, 0.17966154, 4.813075e-08, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect2"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 39.0
color = Color(0.31976697, 0.11668778, 1.2032687e-07, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_top = 448.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.46055228, 0.17966154, 4.813075e-08, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect3"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 39.0
color = Color(0.31976697, 0.11668778, 1.2032687e-07, 1)

[node name="Ready" type="Label" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
text = "READY...."
label_settings = SubResource("LabelSettings_yqivm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GO" type="Label" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
text = "GO!"
label_settings = SubResource("LabelSettings_d7iiw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlinkTimer" type="Timer" parent="GO"]
wait_time = 0.5

[node name="WinScreen" type="ColorRect" parent="."]
offset_left = 264.0
offset_top = 128.0
offset_right = 880.0
offset_bottom = 504.0
color = Color(0, 1, 1, 1)

[node name="CenterContainer" type="CenterContainer" parent="WinScreen"]
layout_mode = 0
offset_right = 616.0
offset_bottom = 376.0

[node name="VBoxContainer" type="VBoxContainer" parent="WinScreen/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="WinScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "YOU WIN!"
label_settings = SubResource("LabelSettings_r0hlr")

[node name="Button" type="Button" parent="WinScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="LossScreen" type="ColorRect" parent="."]
offset_left = 264.0
offset_top = 128.0
offset_right = 880.0
offset_bottom = 504.0
color = Color(0, 1, 1, 1)

[node name="CenterContainer" type="CenterContainer" parent="LossScreen"]
layout_mode = 0
offset_right = 616.0
offset_bottom = 376.0

[node name="VBoxContainer" type="VBoxContainer" parent="LossScreen/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LossScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "YOU LOSE :("
label_settings = SubResource("LabelSettings_r0hlr")

[node name="Button" type="Button" parent="LossScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Retry"

[connection signal="done_manual_wave" from="PlayerCrowdLine" to="." method="_on_player_crowd_line_done_manual_wave"]
[connection signal="go" from="PlayerCrowdLine" to="." method="_on_player_crowd_line_go"]
[connection signal="done_auto_wave" from="EnemyCrowdLine" to="." method="_on_enemy_crowd_line_done_auto_wave"]
[connection signal="timeout" from="GO/BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="pressed" from="WinScreen/CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="LossScreen/CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
